--- a/design-project.css
+++ b/design-project.css
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.anton {
+    font-family: 'Anton', sans-serif;
+}
 h1 h2 h3 h4 h5 {
     font-family: 'Anton', sans-serif;
 }
@@ -17,9 +19,10 @@ p {
 }
 .container {
     background-color: #F0F0F0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
+    padding: 0;
 }
 h1 {
     font-size: 64px;
@@ -35,9 +38,63 @@ h4 {
 }
 h5 {
     font-size: 28px;
+    color: white;
 }
-#design-circle {
+h5 {
+
+}
+#design {
+    width: 115px;
+    height: 115px;
+    border: 8px solid white;
+    margin-right: 0;
+}
+#develop{
+    width: 115px;
+    height: 115px;
+    border: 8px solid white;
+}
+#support{
+    width: 115px;
+    height: 115px;
+    border: 8px solid white;
+}
+#host{
+    width: 115px;
+    height: 115px;
+    border: 8px solid white;
+}
+#header {
+   font-size: 2.8em;
+}
+.numberThree {
+    margin-top: 100px;
+}
+#appleIpad {
+    width: 80%;
+    border: 6px solid #E6E6E6;
+    border-radius: 2%;
+}
+.circleRed {
     background-color: #E6563E;
-    width: 105px;
-    height: 105px;
+    height: 18px;
+    width: 18px;
+}
+.circleOrange {
+    background-color: #EB9D3A;
+    height: 18px;
+    width: 18px;
+}
+.circleGreen {
+    background-color: #7CB06C;
+    height: 18px;
+    width: 18px;
+}
+.circleBlue {
+    background-color: #00ABA9;
+    height: 18px;
+    width: 18px;
+}
+#smallCircles {
+    width: 50%;
 }
