--- a/design-project.css
+++ b/design-project.css
@@ -91,11 +91,24 @@ li {
     width: 105px;
     height: 105px;
     mix-blend-mode: multiply;
+    margin-top: 10px;
+
 }
 
 .whiteBar {
     width: 100%;
     height: 55px;
+    position: absolute;
+    top: 35px;
+}
+.bg-circle {
+    background-color: white;
+    height: 93px;
+    width: 93px;
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
 }
 #header {
@@ -110,28 +123,30 @@ li {
 .fromUtah {
     margin: 2em 0;
 }
-#design {
+.design {
     width: 115px;
     height: 115px;
     border: 8px solid white;
     margin-right: 0;
 }
-#develop{
+.develop{
     width: 115px;
     height: 115px;
     border: 8px solid white;
 }
-#support{
+.support{
     width: 115px;
     height: 115px;
     border: 8px solid white;
 }
-#host{
+.host{
     width: 115px;
     height: 115px;
     border: 8px solid white;
 }
+.line {
 
+}
 /*THIRD ROW BELOW*/
 
 #appleIpad {
