--- a/design-project.css
+++ b/design-project.css
@@ -26,6 +26,7 @@ h4 {
 h5 {
     font-size: 28px;
     color: white;
+    margin: 0;
 }
 h6 {
     font-size: .65em;
@@ -41,15 +42,22 @@ li {
 .anton {
     font-family: 'Anton', sans-serif;
 }
-
+.col-12 {
+    padding: 0;
+}
 /*GLOBALS BELOW*/
-
+.col-sm-3 {
+    padding: 0;
+    max-width: 125px;
+}
 .container {
     background-color: #F0F0F0;
     width: 100%;
     height: 100%;
     overflow: hidden;
     padding: 0;
+    margin: 0;
+    max-width: none;
 }
 .rowOne {
     margin-bottom: 5em;
@@ -57,10 +65,6 @@ li {
 .rowTwo {
 
 }
-.rowThree {
-    margin: 96px 10% 0 10%;
-}
-
 /*CIRCLES AND ICONS BELOW*/
 
 
@@ -92,7 +96,6 @@ li {
     height: 105px;
     mix-blend-mode: multiply;
     margin-top: 10px;
-
 }
 
 .whiteBar {
@@ -100,6 +103,7 @@ li {
     height: 55px;
     position: absolute;
     top: 35px;
+    background-size: cover;
 }
 .bg-circle {
     background-color: white;
@@ -116,6 +120,7 @@ li {
 }
 .navFlex {
     margin: 0 10%;
+    max-width: 500px;
 }
 
 /*SECOND ROW BELOW*/
@@ -127,7 +132,7 @@ li {
     width: 115px;
     height: 115px;
     border: 8px solid white;
-    margin-right: 0;
+    /*margin-right: 0;*/
 }
 .develop{
     width: 115px;
@@ -144,17 +149,52 @@ li {
     height: 115px;
     border: 8px solid white;
 }
-.line {
 
+/* XS CIRCLE POSITION*/
+.xsCircle {
+    margin: 5px 10px;
 }
-/*THIRD ROW BELOW*/
 
-#appleIpad {
+
+
+/*SMALL CIRCLE POSITION*/
+
+.smCircle {
+    padding: 0 15px;
+}
+.smlCircleBox {
     width: 100%;
+}
+.line {
+    width: 72%
+}
+
+/*THIRD ROW BELOW*/
+.rowThree {
+    margin: 0;
+}
+.rowThreeXS {
+    /*margin: 96px 10% 0 10%;*/
+}
+.rowThreeSM {
+    margin-top: 17px
+}
+
+
+
+#appleIpadXS {
+    width: 80%;
     border: 6px solid #E6E6E6;
     border-radius: 2%;
+    margin: 0 10%;
 }
-#smallCircles {
+#appleIpadSM {
+    width: 80%;
+    border: 6px solid #E6E6E6;
+    border-radius: 2%;
+    margin: 0 10%;
+}
+.smallCircles {
     width: 85%;
     margin-top: 4px;
 }
